k8s/vanilla_approach/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    name: observability
    purpose: monitoring
