k8s/vanilla_approach/observability-ingress-combined.yaml
# This is a format showing how to use diferent paths for multiple services in a single Ingress
# it works for Prometheus with subpath, but it doesn't work for Grafana with subpath, so use observability-ingress-separate.yaml instead for now. 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-ingress
  namespace: observability
  annotations:
    # Specify the ingress class
    kubernetes.io/ingress.class: nginx
    # IMPORTANT: Use different rewrite for different paths
    # For Grafana and Prometheus with subpath support, don't rewrite
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    
    # Add configuration snippet to preserve the path
spec:
  ingressClassName: nginx  # Explicitly set the ingress class
  rules:
  - host: demo123.swedencentral.cloudapp.azure.com
    http:
      paths:
        - path: "/prometheus(/|$)(.*)"
          pathType: ImplementationSpecific
          backend:
            service:
              name: prometheus
              port:
                number: 9090

        - path: "/grafana(/|$)(.*)"
          pathType: ImplementationSpecific
          backend:
            service:
              name: grafana
              port:
                number: 3000

        - path: "/collector(/|$)(.*)"
          pathType: ImplementationSpecific
          backend:
            service:
              name: otel-collector
              port:
                number: 4318
